azure-workshop-master/aks/calicoctl.yaml

apiVersion: v1
kind: Pod
metadata:
  name: calicoctl
  namespace: kube-system
spec:
  nodeSelector:
    beta.kubernetes.io/os: linux
  hostNetwork: true
  imagePullSecrets:
  - name: cnx-pull-secret
  serviceAccountName: calicoctl
  containers:
  - name: calicoctl
    image: quay.io/tigera/calicoctl:v2.3.0
    command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
