azure-workshop-master/aks/operator.yaml
# This manifest includes the following component versions:
#   quay.io/coreos/prometheus-operator:v0.18.1
#   quay.io/coreos/prometheus-config-reloader:v0.0.3
#   quay.io/coreos/configmap-reload:v0.0.1
#   upmcenterprises/elasticsearch-operator:0.2.0
---

# This manifest creates a namespace for deploying prometheus-operator,
# Prometheus and alertmanager.
apiVersion: v1
kind: Namespace
metadata:
  name: calico-monitoring
---
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: default-deny
  namespace: calico-monitoring
spec:
  podSelector:
    matchLabels: {}
---

# This manifest deploys the Tigera Secure EE Prometheus Operator.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: calico-prometheus-operator
  namespace: calico-monitoring
  labels:
    operator: prometheus
spec:
  replicas: 1
  template:
    metadata:
      labels:
        operator: prometheus
    spec:
      nodeSelector:
        beta.kubernetes.io/os: linux
        # If necessary, uncomment the line below and edit key:value pair with appropriate value for your environment.
        #node.role: infrastructure
      serviceAccountName: calico-prometheus-operator
      containers:
      - name: calico-prometheus-operator
        image: quay.io/coreos/prometheus-operator:v0.18.1
        args:
          - --prometheus-config-reloader=quay.io/coreos/prometheus-config-reloader:v0.0.3
          - --config-reloader-image=quay.io/coreos/configmap-reload:v0.0.1
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 200m
            memory: 100Mi
---

# Elasticsearch operator
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-operator
  namespace: calico-monitoring
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: elasticsearch-operator
    spec:
      nodeSelector:
        beta.kubernetes.io/os: linux
        # If necessary, uncomment the line below and edit key:value pair with appropriate value for your environment.
        #node.role: infrastructure
      containers:
      - name: operator
        image: upmcenterprises/elasticsearch-operator:0.2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
        livenessProbe:
          httpGet:
            path: /live
            port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 5
      serviceAccount: elasticsearch-operator
